fix spacing on header logo issues

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -10,14 +10,18 @@
   padding-block: var(--topnav-padding);
   padding-inline: 40px;
   display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+}
+.header__logo{
+  flex-grow: 1;
+  display: grid;
+  place-items: center;
 }
 .header__menu__btn {
   border: none;
   background-color: transparent;
   color: var(--normal-text-col);
-}
-.header__logo {
-  margin: auto;
 }
 .header__menu__btn {
   width: 44px;
@@ -75,6 +79,9 @@
     position: static;
     background-color: var(--dark-text-col);
   }
+  .header__logo{
+    flex-grow: 0;
+  }
   .topnav .links a{
     padding: .5rem;
   }
@@ -84,6 +91,7 @@
   }
   .header__logo__container {
     padding: 60px 0 0;
+  justify-content: center;
   }
   .header__menu__btn {
     display: none;
